@@ -25,6 +25,7 @@ import java.io.DataInputStream;
 import java.io.FileInputStream;
 import java.io.FileReader;
 import java.io.IOException;
+import java.io.InputStream;
 import java.lang.reflect.Field;
 import java.lang.reflect.Modifier;
 import java.nio.file.Files;
@@ -44,8 +45,8 @@ import java.util.Map;
 import java.util.Scanner;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 
+import org.apache.commons.compress.utils.FileNameUtils;
 import org.apache.commons.io.FilenameUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.slf4j.Logger;
@@ -299,7 +300,8 @@ public class MediaFileHelper {
         || basename.matches("(?i).*[-]+extra[s]?[-].*") // extra[s] just with surrounding dash (other delims problem)
         || foldername.equalsIgnoreCase("extras") // preferred folder name
         || foldername.equalsIgnoreCase("extra") // preferred folder name
-        || basename.matches("(?i).*[-](behindthescenes|deleted|featurette|interview|scene|short|other|bloopers)\\d?$") // Plex (w/o trailer)
+        || basename.matches("(?i).*[-](behindthescenes|deleted|featurette|interview|scene|short|other|bloopers)\\d?$")
+        // Plex (w/o trailer)
         || EXTRA_FOLDERS.stream().anyMatch(relativePathJunks::contains)) // extra folders
     {
       return MediaFileType.EXTRA;
@@ -370,11 +372,12 @@ public class MediaFileHelper {
    *
    * @param pathToFile
    *          the path/file to parse
-   * @return the detected media file type or MediaFileType.UNKNOWN
+   * @return the detected media file type or MediaFileType.GRAPHIC
    */
   public static MediaFileType parseImageType(Path pathToFile) {
     String filename = pathToFile.getFileName().toString();
     String foldername = pathToFile.getParent() == null ? "" : pathToFile.getParent().toString().toLowerCase(Locale.ROOT); // just path w/o filename
+    String parentName = FilenameUtils.getBaseName(pathToFile.getParent() == null ? "" : pathToFile.getParent().toString());
 
     // movieset artwork
     Matcher matcher = MediaFileHelper.MOVIESET_ARTWORK_PATTERN.matcher(filename);
@@ -494,12 +497,17 @@ public class MediaFileHelper {
       return MediaFileType.EXTRATHUMB;
     }
 
+    // same name as the parent -> poster (Zidoo)
+    if (parentName.equals(FileNameUtils.getBaseName(filename))) {
+      return MediaFileType.POSTER;
+    }
+
     return MediaFileType.GRAPHIC;
   }
 
   /**
    * checks, if MediaFile is in its own dedicated "extras" folder, and not just an extras file...
-   * 
+   *
    * @param mf
    *          the mediafile to check
    * @param entity
@@ -1475,8 +1483,8 @@ public class MediaFileHelper {
       // read VIDEO_TS.IFO
       DataInputStream din = null;
       if (ifomif.getContents() == null) {
-        FileInputStream fin = new FileInputStream(ifomif.getFileAsPath().toString());
-        din = new DataInputStream(new BufferedInputStream(fin));
+        InputStream is = Files.newInputStream(ifomif.getFileAsPath());
+        din = new DataInputStream(new BufferedInputStream(is));
       }
       else {
         din = new DataInputStream(new ByteArrayInputStream(ifomif.getContents()));
@@ -1487,7 +1495,7 @@ public class MediaFileHelper {
       din.close();
 
       // get now all unique titleSetNumbers
-      List<Integer> sets = dvd.getTitles().stream().map(DvdTitle::getVtsn).distinct().collect(Collectors.toList());
+      List<Integer> sets = dvd.getTitles().stream().map(DvdTitle::getVtsn).distinct().toList();
       for (Integer vtsn : sets) {
         String file = String.format("VTS_%02d_0.IFO", vtsn);
         LOGGER.debug("Reading file {}", file);
@@ -2172,13 +2180,13 @@ public class MediaFileHelper {
             String[] brChunks = br.split("/");
             int brMult = 0;
             for (String brChunk : brChunks) {
-              brMult += MetadataUtil.parseInt(brChunk.trim(), 0);
+              brMult += MetadataUtil.parseInt(brChunk.strip(), 0);
             }
             stream.setBitrate(brMult / 1000);
           }
           else {
             br = br.replace("kb/s", "");// 448 / 1000 = 0
-            stream.setBitrate(Integer.parseInt(br.trim()) / 1000);
+            stream.setBitrate(Integer.parseInt(br.strip()) / 1000);
           }
         }
         catch (Exception e) {
@@ -2458,7 +2466,7 @@ public class MediaFileHelper {
     mediaFile.setBitDepth(MetadataUtil.parseInt(bd, 0));
 
     try {
-      String fr = getMediaInfoValue(miSnapshot, MediaInfo.StreamKind.Video, 0, "FrameRate");
+      String fr = getMediaInfoValue(miSnapshot, MediaInfo.StreamKind.Video, 0, "FrameRate", "FrameRate_Original");
       mediaFile.setFrameRate(Double.parseDouble(fr));
     }
     catch (Exception e) {
@@ -3046,7 +3054,7 @@ public class MediaFileHelper {
   /**
    * get the main video file for the given {@link MediaFile}. Handy if the {@link MediaFile} is a disc structure<br />
    * partly taken from detectRelevantDvdFiles, detectRelevantBlurayFiles and detectRelevantHdDvdFiles
-   * 
+   *
    * @param mediaFile
    *          the {@link MediaFile} to check
    * @return the {@link Path} to the main video file
@@ -3220,7 +3228,7 @@ public class MediaFileHelper {
           // no langu AND no hicc?
           title = "";
         }
-        else if (languageIndex < chunks.size()) {
+        else if (languageIndex >= 0 && languageIndex < chunks.size()) {
           // the language index was not the last chunk. Save the part between the language index and the last chunk as title
           title = String.join(" ", chunks.subList(languageIndex, chunks.size()));
         }
